[package]
name = "hephae"
version = "0.1.1"
authors = ["GlFolker <glenn.folk08@gmail.com>"]
edition = "2021"
rust-version = "1.81"
description = "A personalized, opinionated Bevy plugin that adds support for drawing and batching arbitrary vertices and indices."
repository = "https://github.com/GlennFolker/hephae"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "graphics", "render", "vertex", "batch"]
categories = ["graphics", "rendering"]
exclude = [
    "assets",
    "examples",
]

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_render"] }
bytemuck = { version = "1", features = ["align_offset", "derive", "min_const_generics", "wasm_simd", "aarch64_simd"] }
dashmap = { version = "6", features = ["inline"] }
fixedbitset = "0.5"
guillotiere = { version = "0.6", optional = true }
radsort = { version = "0.1", optional = true }
ron = { version = "0.8", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { version = "1", optional = true }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_winit", "png", "multi_threaded", "x11", "file_watcher", "trace"] }

[features]
default = ["atlas"]
atlas = ["dep:guillotiere", "dep:radsort", "dep:ron", "dep:serde", "dep:thiserror"]

[[example]]
name = "quad"

[[example]]
name = "sprite"
required-features = ["atlas"]

[package.metadata.docs.rs]
all-features = true
